# malax

./: Cargo.toml  LICENSE  README.md  dprint.json
src/: main.rs
