[package]
name = "malax"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.4"
redis = { version = "0.21", default-features = false, features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std", "parsing", "formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
