[package]
name = "malax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.2.5", features = ["derive"] }
redis = { version = "0.21", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots", "blocking", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["std", "parsing", "formatting", "serde-well-known"] }
